[package]
name = "cyclone-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
downcast-rs = "1.2.1"
slotmap = "1.0.7"

[features]
double_precision = []

[dev-dependencies]
macroquad = "0.4.5"
